crates/strider/tests/snapshots/v2__ppc32be__calling_convention__narrow_widths.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100006ac:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "8" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u16\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="SignExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Load u16\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xffffffea:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u8\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffe9:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="SignExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Load u8\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="SignExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="SignExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Truncate\nu32 → u16", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="ZeroExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Truncate\nu32 → u16", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "40" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="ZeroExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="SignExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "46" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="SignExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="StackStore u16\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "52" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="StackStore u16\n→ ram[sp - 22]", shape=box3d, fillcolor="#20182a"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u8\n→ ram[sp - 23]", shape=box3d, fillcolor="#20182a"];
  "56" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="StackStore u8\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "58" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "60" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "62" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "60" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "63" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "60" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "63" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "66" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
