crates/strider/tests/snapshots/v2__ppc32be__calling_convention__sink16.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v8" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v8" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[15] ← ram[sp + 36]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[14] ← ram[sp + 32]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="arg[13] ← ram[sp + 28]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="arg[12] ← ram[sp + 24]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="arg[11] ← ram[sp + 20]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="arg[10] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="arg[9] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="arg[8] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[7] ← r10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[6] ← r9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[5] ← r8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="arg[4] ← r7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "3" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "39" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "42" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "44" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "48" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "50" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "52" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "56" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "58" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "58" [label="StackStore u32\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "61" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
